tests/golden/type_errors/re_export_forward_only.cd
export value from "../re_export_direct/lib.cd";
print value;
