tests/golden/type_errors/re_export_forward_only.err
Type error at <repo>/tests/golden/type_errors/re_export_forward_only.cd:2:7: undefined variable `value`
